--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 
 <head>
     <link rel="stylesheet" href="styles.css" />
-    <title> Aluraflix </title>
+    <title> Santosflix </title>
 </head>
 
 <body>
 
-    <header>ALURAFLIX</header>
+    <header> Santosflix </header>
     <section>
         <div>
             <h1>LIVE DO TRIO: o que faz PAULO BRACKS e GALLO tenta 29 JOGADORES</h1>
